# simple-collider-simulator

./: README.md
geant4/: CMakeLists.txt  sim.cc  vis.mac
geant4/include/: ActionInitialization.hh  CalorimeterParameterisation.hh  CalorimeterParameters.hh  DetectorsConstruction.hh  DetectorsParameters.hh  G4HepMC3AsciiReader.hh  G4HepMC3AsciiReaderMessenger.hh  G4HepMC3Interface.hh  MuonBarrelParameterisation.hh  PhysicsList.hh  PrimaryGenerator.hh  TrackerParameterisation.hh  TrackerParameters.hh
geant4/src/: ActionInitialization.cc  CalorimeterParameterisation.cc  CalorimeterParameters.cc  DetectorsConstruction.cc  DetectorsParameters.icc  G4HepMC3AsciiReader.cc  G4HepMC3AsciiReaderMessenger.cc  G4HepMC3Interface.cc  MuonBarrelParameterisation.cc  PhysicsList.cc  PrimaryGenerator.cc  TrackerParameterisation.cc  TrackerParameters.cc
pythia/: EventsGenerator  EventsGenerator.cc  Makefile
